--- a/package/metadata.desktop
+++ b/package/metadata.desktop
@@ -3,7 +3,7 @@ Name=Phabricator Revisions
 Comment=Lists the most recent diffs for a Phabricator website.
 
 Type=Service
-Icon=bug.svg
+Icon=phabricator-logo.svg
 X-KDE-ServiceTypes=Plasma/Applet
 
 X-Plasma-API=declarativeappletscript
